routers and google Analytics

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Free me TODAY</title>
   <base href="/">
-
+<!-- NAO USAR ESSE INDEX HMTL -->
   <meta name="description" content="é uma plataforma online para divulgar e conscientizar as pessoas sobre as ideas de Liberdade, Propriedade e Paz.">
   <meta name="keywords" content="Liberdade, Libertarianismo, freedom, free, today, Escola Austriaca, EA, anarcocapitalismo, capitalismo, socialismo, esquerda, direita, liberal, comunismo, marx, mises, hoppe, rothbard, adam smirth, capital, dinheiro, bitcoin, altcoin">
   <meta name="author" content="Ernane Luis">
@@ -17,21 +17,13 @@
 
 <link href="styles.bundle.css" rel="stylesheet"></head>
 <body style="margin:0px">
+
+
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.bundle.js"></script>
-<script type="text/javascript" src="vendor.bundle.js"></script>
-<script type="text/javascript" src="main.bundle.js"></script>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-90336706-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+  <script type="text/javascript" src="inline.bundle.js"></script>
+  <script type="text/javascript" src="vendor.bundle.js"></script>
+  <script type="text/javascript" src="main.bundle.js"></script>
 
 </body>
 </html>
