--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <meta name="description" content="é uma plataforma online para divulgar e conscientizar as pessoas sobre as ideas de Liberdade, Propriedade e Paz.">
+  <meta name="keywords" content="Liberdade, Libertarianismo, freedom, free, today, Escola Austriaca, EA, anarcocapitalismo, capitalismo, socialismo, esquerda, direita, liberal, comunismo, marx, mises, hoppe, rothbard, adam smirth, capital, dinheiro, bitcoin, altcoin">
+  <meta name="author" content="Ernane Luis">
+
+  <meta property="og:url"                content="http://www.freeme.today" />
+  <meta property="og:type"               content="website" />
+  <meta property="og:title"              content="Free me TODAY: O Portal da Liberdade" />
+  <meta property="og:description"        content="É uma plataforma online para divulgar e conscientizar as pessoas sobre as ideas de Liberdade, Propriedade e Paz." />
+  <meta property="og:image"              content="./assets/img/logo-freeme.png" />
+
+
 </head>
 <body style="margin:0px">
   <script>
