--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <meta property="og:type"               content="website" />
   <meta property="og:title"              content="Free me TODAY: O Portal da Liberdade" />
   <meta property="og:description"        content="É uma plataforma online para divulgar e conscientizar as pessoas sobre as ideas de Liberdade, Propriedade e Paz." />
-  <meta property="og:image"              content="./assets/img/logo-freeme.png" />
+  <meta property="og:image"              content="http://www.freeme.today/assets/img/logo-freeme.png" />
 
 
 </head>
