bug fix and meta tag twitter

--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,20 @@
 
   <meta name="description" content="é uma plataforma online para divulgar e conscientizar as pessoas sobre as ideas de Liberdade, Propriedade e Paz.">
   <meta name="keywords" content="Liberdade, Libertarianismo, freedom, free, today, Escola Austriaca, EA, anarcocapitalismo, capitalismo, socialismo, esquerda, direita, liberal, comunismo, marx, mises, hoppe, rothbard, adam smirth, capital, dinheiro, bitcoin, altcoin">
-  <meta name="author" content="Ernane Luis">
+  <meta name="author" content="Ernane Luis - ernane.luis@gmail.com">
 
   <meta property="og:url"                content="http://www.freeme.today" />
   <meta property="og:type"               content="website" />
   <meta property="og:title"              content="Free me TODAY: O Portal da Liberdade" />
   <meta property="og:description"        content="É uma plataforma online para divulgar e conscientizar as pessoas sobre as ideas de Liberdade, Propriedade e Paz." />
   <meta property="og:image"              content="http://www.freeme.today/assets/img/logo-freeme.png" />
+
+  <meta property="twitter:card" content="summary" />
+  <meta property="twitter:title" content="Free me TODAY: O Portal da Liberdade" />
+  <meta property="twitter:description" content="É uma plataforma online para divulgar e conscientizar as pessoas sobre as ideas de Liberdade, Propriedade e Paz." />
+  <meta property="twitter:image" content="http://www.freeme.today/assets/img/logo-freeme.png" />
+  <meta property="twitter:creator" content="ernane.luis@gmail.com" >
+  <meta property="twitter:url" content="http://www.freeme.today" >
 
 
 </head>
