firebase and new data source

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,19 @@
     // ga('send', 'pageview');
   </script>
 
+  <script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyBlNcYDpRyHFQFMVDIb4YUUzV922v7Jr1A",
+      authDomain: "freeme-today.firebaseapp.com",
+      databaseURL: "https://freeme-today.firebaseio.com",
+      storageBucket: "freeme-today.appspot.com",
+      messagingSenderId: "265007021010"
+    };
+    firebase.initializeApp(config);
+  </script>
+
   <app-root>Loading...</app-root>
 </body>
 
